--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -2,109 +2,107 @@
 
 | Index | Issue      | 术语                                                          | 中文翻译                          | 备注                               | 状态     |
 |-------|------------|---------------------------------------------------------------|-----------------------------------|------------------------------------|----------|
-| 1     | [Issue 2]  | artifact                                                      | 工件                              |                                    | `未解决` |
+| 1     | [Issue 2]  | artifact                                                      | 工件                              |                                    | **未解决** |
 | 2     | [Issue 3]  | aboutness                                                     | 关涉性                            |                                    | 解决     |
 | 3     | [Issue 4]  | Adequatism                                                    | 适当主义                          |                                    | 解决     |
-| 4     | [Issue 5]  | adequatist                                                    | 适当主义者                        |                                    | `未解决` |
+| 4     | [Issue 5]  | adequatist                                                    | 适当主义者                        |                                    | **未解决** |
 | 5     | [Issue 6]  | assertion                                                     | 断言                              |                                    | 解决     |
 | 6     | [Issue 7]  | class                                                         | 类                                |                                    | 解决     |
-| 7     | [Issue 8]  | containment                                                   | 容器                              |                                    | `未解决` |
-| 8     | [Issue 9]  | Convention                                                    | 规范                              |                                    | `未解决` |
-| 9     | [Issue 10] | data wrangling                                                | 数据清洗                          |                                    | `未解决` |
-| 10    | [Issue 11] | Primitive Classe                                              | 基元类                            |                                    | `未解决` |
-| 11    | [Issue 11] | Defined Classes                                               | 定义类                            |                                    | `未解决` |
-| 12    | [Issue 12] | disorder                                                      | 紊乱&失调&障碍                    | 同 [Issue 94]                      | `未解决` |
-| 13    | [Issue 13] | Epistemological idealism                                      | 认识论的唯心主义                  |                                    | `未解决` |
-| 14    | [Issue 14] | Exhaustiveness                                                | 广谱性                            |                                    | `未解决` |
-| 15    | [Issue 15] | fallibilism                                                   | 可误论                            |                                    | `未解决` |
-| 16    | [Issue 16] | foundational relation                                         | 基础关系                          |                                    | `未解决` |
-| 17    | [Issue 17] | has_participant                                               | 有参与者                          |                                    | `未解决` |
-| 18    | [Issue 18] | hierarchy                                                     | 层级结构                          | 层次结构？分层结构？               | `未解决` |
-| 19    | [Issue 19] | identity                                                      | 同一性                            |                                    | `未解决` |
-| 20    | [Issue 20] | Information Artifact Ontology                                 | 信息工件本体                      |                                    | `未解决` |
+| 7     | [Issue 8]  | containment                                                   | 容器                              |                                    | **未解决** |
+| 8     | [Issue 9]  | Convention                                                    | 规范                              |                                    | **未解决** |
+| 9     | [Issue 10] | data wrangling                                                | 数据清洗                          |                                    | **未解决** |
+| 10    | [Issue 11] | Primitive Classe                                              | 基元类                            |                                    | **未解决** |
+| 11    | [Issue 11] | Defined Classes                                               | 定义类                            |                                    | **未解决** |
+| 12    | [Issue 12] | disorder                                                      | 紊乱&失调&障碍                    | 同 [Issue 94]                      | **未解决** |
+| 13    | [Issue 13] | Epistemological idealism                                      | 认识论的唯心主义                  |                                    | **未解决** |
+| 14    | [Issue 14] | Exhaustiveness                                                | 广谱性                            |                                    | **未解决** |
+| 15    | [Issue 15] | fallibilism                                                   | 可误论                            |                                    | **未解决** |
+| 16    | [Issue 16] | foundational relation                                         | 基础关系                          |                                    | **未解决** |
+| 17    | [Issue 17] | has_participant                                               | 有参与者                          |                                    | **未解决** |
+| 18    | [Issue 18] | hierarchy                                                     | 层级结构                          | 层次结构？分层结构？               | **未解决** |
+| 19    | [Issue 19] | identity                                                      | 同一性                            |                                    | **未解决** |
+| 20    | [Issue 20] | Information Artifact Ontology                                 | 信息工件本体                      |                                    | **未解决** |
 | 21    | [Issue 21] | instantiates                                                  | 实例化                            |                                    | 解决     |
-| 22    | [Issue 22] | integral_occurrent_part                                       | 必需常体部件                      |                                    | `未解决` |
-| 23    | [Issue 23] | Reciprocity & reciprocal                                      | 对等                              | 互惠？互换？                       | `未解决` |
-| 24    | [Issue 24] | Living subject                                                | 生命主体                          |                                    | `未解决` |
+| 22    | [Issue 22] | integral_occurrent_part                                       | 必需常体部件                      |                                    | **未解决** |
+| 23    | [Issue 23] | Reciprocity & reciprocal                                      | 对等                              | 互惠？互换？                       | **未解决** |
+| 24    | [Issue 24] | Living subject                                                | 生命主体                          |                                    | **未解决** |
 | 25    | [Issue 25] | Low-Hanging Fruit & low-hanging fruit pirinciple              | 低果先摘                          |                                    | 解决     |
 | 26    | [Issue 26] | mass nouns                                                    | 不可数名词                        |                                    | 解决     |
 | 27    | [Issue 27] | metaphysical nominalism                                       | 形而上学唯名论                    |                                    | 解决     |
 | 28    | [Issue 28] | negative terms                                                | 否定术语                          |                                    | 解决     |
-| 29    | [Issue 29] | Novum Organum                                                 |                                   |                                    | `未解决` |
-| 30    | [Issue 30] | OBO Foundry                                                   | OBO工场                           |                                    | `未解决` |
-| 31    | [Issue 31] | Obstacles to Accessibility                                    | 可达性的障碍                      |                                    | `未解决` |
+| 29    | [Issue 29] | Novum Organum                                                 |                                   |                                    | **未解决** |
+| 30    | [Issue 30] | OBO Foundry                                                   | OBO工场                           |                                    | **未解决** |
+| 31    | [Issue 31] | Obstacles to Accessibility                                    | 可达性的障碍                      |                                    | **未解决** |
 | 32    | [Issue 32] | organon                                                       | 工具论                            |                                    | 解决     |
-| 33    | [Issue 33] | particulars                                                   | 殊相                              |                                    | `未解决` |
-| 34    | [Issue 34] | Performed activity                                            | 执行活动                          |                                    | `未解决` |
-| 35    | [Issue 35] | perspectivalism                                               | 观相主义                          |                                    | `未解决` |
-| 36    | [Issue 36] | Perspective                                                   | 视角                              |                                    | `未解决` |
+| 33    | [Issue 33] | particulars                                                   | 殊相                              |                                    | **未解决** |
+| 34    | [Issue 34] | Performed activity                                            | 执行活动                          |                                    | **未解决** |
+| 35    | [Issue 35] | perspectivalism                                               | 观相主义                          |                                    | **未解决** |
+| 36    | [Issue 36] | Perspective                                                   | 视角                              |                                    | **未解决** |
 | 37    | [Issue 37] | positive term                                                 | 肯定术语                          |                                    | 解决     |
-| 38    | [Issue 38] | preceded_by                                                   | 之后                              | 在...之后                          | `未解决` |
+| 38    | [Issue 38] | preceded_by                                                   | 之后                              | 在...之后                          | **未解决** |
 | 39    | [Issue 39] | preferred terms                                               | 首选术语                          |                                    | 解决     |
-| 40    | [Issue 40] | proper_continuant_part_of                                     | 真常体部件                        | …的真常体部件                      | `未解决` |
-| 41    | [Issue 40] | proper_occurrent_part_of                                      | 真行体部件                        | …的真行体部件                      | `未解决` |
+| 40    | [Issue 40] | proper_continuant_part_of                                     | 真常体部件                        | …的真常体部件                      | **未解决** |
+| 41    | [Issue 40] | proper_occurrent_part_of                                      | 真行体部件                        | …的真行体部件                      | **未解决** |
 | 42    | [Issue 41] | property                                                      | 属性                              |                                    | 解决     |
-| 43    | [Issue 42] | RDF Schema                                                    | RDF Schema                        | 不翻译                             | `未解决` |
-| 44    | [Issue 43] | reference or aboutness                                        | 指称                              |                                    | `未解决` |
+| 43    | [Issue 42] | RDF Schema                                                    | RDF Schema                        | 不翻译                             | **未解决** |
+| 44    | [Issue 43] | reference or aboutness                                        | 指称                              |                                    | **未解决** |
 | 45    | [Issue 44] | reference frame & Frames of Reference                         | 参照系                            |                                    | 解决     |
 | 46    | [Issue 45] | reference ontology                                            | 参考本体                          |                                    | 解决     |
 | 47    | [Issue 46] | referent                                                      | 所指物                            |                                    | 解决     |
-| 48    | [Issue 47] | regimentation                                                 | 整编                              |                                    | `未解决` |
+| 48    | [Issue 47] | regimentation                                                 | 整编                              |                                    | **未解决** |
 | 49    | [Issue 48] | entities and relationships                                    | 实体和关系                        |                                    | 解决     |
-| 50    | [Issue 49] | knowledge representation                                      | 知识表示                          | 知识表达                           | `未解决` |
-| 51    | [Issue 50] | representation                                                | 表征/表象                         |                                    | `未解决` |
-| 52    | [Issue 51] | representational artifact                                     | 表述性工件                        | 表征性工件                         | `未解决` |
-| 53    | [Issue 52] | representational units and composite representations          | 表述单元和复合表述                |                                    | `未解决` |
+| 50    | [Issue 49] | knowledge representation                                      | 知识表示                          | 知识表达                           | **未解决** |
+| 51    | [Issue 50] | representation                                                | 表征/表象                         |                                    | **未解决** |
+| 52    | [Issue 51] | representational artifact                                     | 表述性工件                        | 表征性工件                         | **未解决** |
+| 53    | [Issue 52] | representational units and composite representations          | 表述单元和复合表述                |                                    | **未解决** |
 | 54    | [Issue 53] | singular noun rule                                            | 单数名词规则                      |                                    | 解决     |
 | 55    | [Issue ]   | taxonomy                                                      | 专业分类表 & 分类表               |                                    | 解决     |
 | 56    | [Issue 54] | classification & taxonomic classification                     | 分类法 & 分类                     |                                    | 解决     |
 | 57    | [Issue 55] | term                                                          | 术语                              |                                    | 解决     |
 | 58    | [Issue 56] | terminology                                                   | 术语集                            |                                    | 解决     |
-| 59    | [Issue 57] | The All-Some Rule                                             | 所有-某些原则                     |                                    | `未解决` |
-| 60    | [Issue 58] | the Biomedical Research Integrated Domain Group (BRIDG) model | 生物医学研究集成领域组(BRIDG)模型 |                                    | `未解决` |
-| 61    | [Issue 59] | The Ontology for General Medical Science, OGMS                | 普通医学本体                      | 基础医学本体？                     | `未解决` |
+| 59    | [Issue 57] | The All-Some Rule                                             | 所有-某些原则                     |                                    | **未解决** |
+| 60    | [Issue 58] | the Biomedical Research Integrated Domain Group (BRIDG) model | 生物医学研究集成领域组(BRIDG)模型 |                                    | **未解决** |
+| 61    | [Issue 59] | The Ontology for General Medical Science, OGMS                | 普通医学本体                      | 基础医学本体？                     | **未解决** |
 | 62    | [Issue 60] | Tower of Babel                                                | 巴别塔问题                        |                                    | 解决     |
-| 63    | [Issue 61] | Triplestore                                                   | 三元组仓库                        | 三元组数据库？                     | `未解决` |
+| 63    | [Issue 61] | Triplestore                                                   | 三元组仓库                        | 三元组数据库？                     | **未解决** |
 | 64    | [Issue 62] | universal                                                     | 共相                              |                                    | 解决     |
 | 65    | [Issue 63] | univocity                                                     | 单义性                            |                                    | 解决     |
 | 66    | [Issue 64] | Use-Mention                                                   | 使用与提述                        |                                    | 解决     |
 | 67    | [Issue 65] | realism                                                       | 实在论                            |                                    | 解决     |
-| 68    | [Issue 66] | reality                                                       | 现实 & 客观现实                   | 实在？？                           | `未解决` |
+| 68    | [Issue 66] | reality                                                       | 现实 & 客观现实                   | 实在？？                           | **未解决** |
 | 69    | [Issue 67] | computer usable language                                      | 计算机可执行语言                  |                                    | 解决     |
 | 70    | [Issue 68] | Foundational Model of Anatomy                                 | 解剖学基础模型                    | Foundational Model of Anatomy, FMA | 解决     |
 | 71    | [Issue 69] | accessibility                                                 | 可达性                            |                                    | 解决     |
 | 72    | [Issue 69] | usability                                                     | 易用性                            |                                    | 解决     |
 | 73    | [Issue 70] | domain neutral                                                | 领域中立                          |                                    | 解决     |
 | 74    | [Issue 71] | Emergence                                                     | 涌现                              |                                    | 解决     |
-| 75    | [Issue 72] | primitive relationship                                        | 基元关系                          |                                    | `未解决` |
-| 76    | [Issue 73] | instant                                                       | 瞬时 & 时刻 & 瞬间                |                                    | `未解决` |
-| 77    | [Issue 74] | inhere & inherence                                            | 寓于                              |                                    | `未解决` |
-| 78    | [Issue 75] | derives_from                                                  | 衍生自                            |                                    | `未解决` |
-| 79    | [Issue 76] | imply & implication                                           | 蕴涵                              |                                    | `未解决` |
+| 75    | [Issue 72] | primitive relationship                                        | 基元关系                          |                                    | **未解决** |
+| 76    | [Issue 73] | instant                                                       | 瞬时 & 时刻 & 瞬间                |                                    | **未解决** |
+| 77    | [Issue 74] | inhere & inherence                                            | 寓于                              |                                    | **未解决** |
+| 78    | [Issue 75] | derives_from                                                  | 衍生自                            |                                    | **未解决** |
+| 79    | [Issue 76] | imply & implication                                           | 蕴涵                              |                                    | **未解决** |
 | 80    | [Issue 77] | instance-level                                                | 实例级                            |                                    | 解决     |
 | 81    | [Issue 78] | Region Connection Calculus                                    | 区域连接演算                      | Region Connection Calculus (RCC)   | 解决     |
-| 82    | [Issue 79] | 原书勘误                                                      |                                   |                                    | `未解决` |
-| 83    | [Issue 96] | parthood                                                      | 部件关系                          | 部分关系？                         | `未解决` |
-| 84    | [Issue 96] | part                                                          | 部件                              | 部分 or 部件？                     | `未解决` |
-| 85    | [Issue 80] | integral （parthood）                                         |                                   |                                    | `未解决` |
+| 82    | [Issue 79] | 原书勘误                                                      |                                   |                                    | **未解决** |
+| 83    | [Issue 96] | parthood                                                      | 部件关系                          | 部分关系？                         | **未解决** |
+| 84    | [Issue 96] | part                                                          | 部件                              | 部分 or 部件？                     | **未解决** |
+| 85    | [Issue 80] | integral （parthood）                                         |                                   |                                    | **未解决** |
 | 86    | [Issue 81] | relata                                                        | 关系项                            |                                    | 解决     |
-| 87    | [Issue 82] | Weak supplementation                                          | 弱补充                            |                                    | `未解决` |
-| 88    | [Issue 83] | ontology                                                      | 本体/本体论                       |                                    | `未解决` |
-| 89    | [Issue 84] | Mental Functioning Ontology                                   | 心理机能本体                      | 心理功能本体？精神功能本体？       | `未解决` |
-| 90    | [Issue 85] | Unique product                                                | 唯一积                            |                                    | `未解决` |
+| 87    | [Issue 82] | Weak supplementation                                          | 弱补充                            |                                    | **未解决** |
+| 88    | [Issue 83] | ontology                                                      | 本体/本体论                       |                                    | **未解决** |
+| 89    | [Issue 84] | Mental Functioning Ontology                                   | 心理机能本体                      | 心理功能本体？精神功能本体？       | **未解决** |
+| 90    | [Issue 85] | Unique product                                                | 唯一积                            |                                    | **未解决** |
 | 91    | [Issue 86] | category                                                      | 范畴                              |                                    | 解决     |
 | 92    | [Issue 87] | minimum information to reference an external ontology term    | 外部本体术语引用最小信息原则      | MIREOT                             | 解决     |
-| 93    | [Issue 88] | Representationalism                                           | 表征主义                          |                                    | `未解决` |
-| 94    | [Issue 89] | causally unified                                              |                                   |                                    | `未解决` |
+| 93    | [Issue 88] | Representationalism                                           | 表征主义                          |                                    | **未解决** |
+| 94    | [Issue 89] | causally unified                                              |                                   |                                    | **未解决** |
 | 95    | [Issue 90] | Descriptive Ontology for Linguistic and Cognitive Engineering | 语言学和认知工程描述本体          |                                    | 解决     |
 | 96    | [Issue 90] | Standard Upper Merged Ontology                                | 标准上层合并本体                  |                                    | 解决     |
-| 97    | [Issue 91] | PhilPaper                                                     | PhilPaper                         | 专有名词，可以不翻译               | `未解决` |
+| 97    | [Issue 91] | PhilPaper                                                     | PhilPaper                         | 专有名词，可以不翻译               | **未解决** |
 | 98    | [Issue 92] | nonskeptical realism                                          | 非怀疑论的实在论                  |                                    | 解决     |
 | 99    | [Issue 93] | mental representations                                        | 心理表征                          |                                    | 解决     |
-| 100   | [Issue 94] | disorder                                                      | 失调                              | 紊乱/障碍                          | `未解决` |
+| 100   | [Issue 94] | disorder                                                      | 失调                              | 紊乱/障碍                          | **未解决** |
 | 101   | [Issue 95] | Basic Formal Ontology                                         | 基本形式化本体                    |                                    | 解决     |
-
-
 
 
 *******************
