--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -103,6 +103,8 @@
 | 99    | [Issue 93] | mental representations                                        | 心理表征                          |                                    | 解决     |
 | 100   | [Issue 94] | disorder                                                      | 失调                              | 紊乱/障碍                          | **未解决** |
 | 101   | [Issue 95] | Basic Formal Ontology                                         | 基本形式化本体                    |                                    | 解决     |
+| 102   | [Issue 96] | Site                                                          | 位域                             |                                    | **未解决** |
+| 103   | [Issue 97] | object                                                        | 物件                             |   对象？                            | **未解决** |
 
 
 *******************
@@ -207,4 +209,7 @@
 [Issue 93]:https://github.com/biomedontology/TermChinesetranslation/issues/93
 [Issue 94]:https://github.com/biomedontology/TermChinesetranslation/issues/94
 [Issue 95]:https://github.com/biomedontology/TermChinesetranslation/issues/95
+[Issue 96]:https://github.com/biomedontology/TermChinesetranslation/issues/96
+[Issue 97]:https://github.com/biomedontology/TermChinesetranslation/issues/97
+
 
