--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -4,7 +4,7 @@
 |-------|------------|---------------------------------------------------------------|-----------------------------------|------------------------------------|----------|
 | 1     | [Issue 2]  | artifact                                                      | 工件                              |                                    | **未解决** |
 | 2     | [Issue 3]  | aboutness                                                     | 关涉性                            |                                    | 解决     |
-| 3     | [Issue 4]  | Adequatism                                                    | 适当主义                          |                                    | 解决     |
+| 3     | [Issue 4]  | Adequatism                                                    | 适当主义                          |                                    | **未解决** |
 | 4     | [Issue 5]  | adequatist                                                    | 适当主义者                        |                                    | **未解决** |
 | 5     | [Issue 6]  | assertion                                                     | 断言                              |                                    | 解决     |
 | 6     | [Issue 7]  | class                                                         | 类                                |                                    | 解决     |
