--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -30,7 +30,7 @@
 | 26    | [Issue 26] | mass nouns                                                    | 不可数名词                        |                                    | 解决     |
 | 27    | [Issue 27] | metaphysical nominalism                                       | 形而上学唯名论                    |                                    | 解决     |
 | 28    | [Issue 28] | negative term & negative terms                                | 否定术语                          |                                    | 解决     |
-| 29    | [Issue 29] | Novum Organum                                                 |                                   |                                    | **未解决** |
+| 29    | [Issue 29] | Novum Organum                                                 | 新工具                            |                                    | **未解决** |
 | 30    | [Issue 30] | OBO Foundry                                                   | OBO工场                           |                                    | **未解决** |
 | 31    | [Issue 31] | Obstacles to Accessibility                                    | 可达性的障碍                      |                                    | **未解决** |
 | 32    | [Issue 32] | organon                                                       | 工具论                            |                                    | 解决     |
@@ -86,7 +86,7 @@
 | 82    | [Issue 79] | 原书勘误                                                      |                                   |                                    | **未解决** |
 | 83    | [Issue 96] | parthood                                                      | 部件关系                          | 部分关系？                         | **未解决** |
 | 84    | [Issue 96] | part & parts                                                  | 部件                              | 部分 or 部件？                     | **未解决** |
-| 85    | [Issue 80] | integral parthood                                             |                                   |                                    | **未解决** |
+| 85    | [Issue 80] | integral parthood                                             | 组成部件关系                      |                                    | **未解决** |
 | 86    | [Issue 81] | relata                                                        | 关系项                            |                                    | 解决     |
 | 87    | [Issue 82] | Weak supplementation                                          | 弱补充                            |                                    | **未解决** |
 | 88    | [Issue 83] | ontology & ontologies                                         | 本体 & 本体论                     |                                    | **未解决** |
@@ -95,7 +95,7 @@
 | 91    | [Issue 86] | category & categories                                         | 范畴                              |                                    | 解决     |
 | 92    | [Issue 87] | minimum information to reference an external ontology term    | 外部本体术语引用最小信息原则      | MIREOT                             | 解决     |
 | 93    | [Issue 88] | Representationalism                                           | 表征主义                          |                                    | **未解决** |
-| 94    | [Issue 89] | causally unified                                              |                                   |                                    | **未解决** |
+| 94    | [Issue 89] | causally unified                                              | 因果统一                          |                                    | **未解决** |
 | 95    | [Issue 90] | Descriptive Ontology for Linguistic and Cognitive Engineering | 语言学和认知工程描述本体          |                                    | 解决     |
 | 96    | [Issue 90] | Standard Upper Merged Ontology                                | 标准上层合并本体                  |                                    | 解决     |
 | 97    | [Issue 91] | PhilPaper                                                     | PhilPaper                         | 专有名词，可以不翻译               | **未解决** |
