--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -107,7 +107,7 @@
 | 103   | [Issue 97] | object & objects                                              | 物件                              |   对象？                           | **未解决** |
 | 104   | [Issue 97] | continuant & continuants                                      | 常体                              |                                    | 解决       |
 | 105   | [Issue 97] | generically dependent continuant                              | 普遍依赖性常体                    |                                    | 解决       |
-| 106   | [Issue 97] | independent continuant                                        | 独立常体常体                      |                                    | 解决       |
+| 106   | [Issue 97] | independent continuant                                        | 独立常体                          |                                    | 解决       |
 | 107   | [Issue 97] | immaterial entity & immaterial entities                       | 非物质实体                        |                                    | 解决       |
 | 108   | [Issue 97] | continuant fiat boundary                                      | 常体认知边界                      |                                    | 解决       |
 | 109   | [Issue 97] | one-dimensional continuant fiat boundary                      | 一维常体认知边界                  |                                    | 解决       |
