--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -129,7 +129,7 @@
 | 125   | [Issue 97] | process profile & process profiles                            | 过程简档                          |                                    | 解决       |
 | 126   | [Issue 97] | process boundary & process boundaries                         | 过程边界                          |                                    | 解决       |
 | 127   | [Issue 97] | spatiotemporal region & spatiotemporal regions                | 时空域                            |                                    | 解决       |
-| 128   | [Issue 97] | temporal region & temporal regions                            | 空间域                            |                                    | 解决       |
+| 128   | [Issue 97] | temporal region & temporal regions                            | 时间域                            |                                    | 解决       |
 
 
 
