--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -23,7 +23,7 @@
 | 19    | [Issue 19] | identity & identities                                         | 同一性                            |                                    | 解决     |
 | 20    | [Issue 20] | Information Artifact Ontology                                 | 信息工件本体                      |                                    | **未解决** |
 | 21    | [Issue 21] | instantiate  & instantiates                                   | 实例化                            |                                    | 解决     |
-| 22    | [Issue 22] | integral_occurrent_part                                       | 必需常体部件                      |                                    | **未解决** |
+| 22    | [Issue 22] | integral_continuant_part_of                                   | 必需常体部件                      |                                    | **未解决** |
 | 23    | [Issue 23] | Reciprocity & reciprocal                                      | 对等                              | 互惠？互换？                       | **未解决** |
 | 24    | [Issue 24] | Living subject                                                | 生命主体                          |                                    | 解决     |
 | 25    | [Issue 25] | Low-Hanging Fruit & low-hanging fruit pirinciple              | 低果先摘                          |                                    | 解决     |
