--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -2,65 +2,65 @@
 
 | Index | Issue      | 术语                                                          | 中文翻译                          | 备注                               | 状态     |
 |-------|------------|---------------------------------------------------------------|-----------------------------------|------------------------------------|----------|
-| 1     | [Issue 2]  | artifact & artifacts                                          | 工件                              |                                    | **未解决** |
+| 1     | [Issue 2]  | artifact & artifacts                                          | 工件                              |                                    | 解决     |
 | 2     | [Issue 3]  | aboutness                                                     | 关涉性                            |                                    | 解决     |
 | 3     | [Issue 4]  | Adequatism                                                    | 适当主义                          |                                    | **未解决** |
 | 4     | [Issue 5]  | adequatist                                                    | 适当主义者                        |                                    | **未解决** |
 | 5     | [Issue 6]  | assertion & assertions                                        | 断言                              |                                    | 解决     |
 | 6     | [Issue 7]  | class & classes                                               | 类                                |                                    | 解决     |
-| 7     | [Issue 8]  | containment  & containments                                   | 容器                              |                                    | **未解决** |
+| 7     | [Issue 8]  | containment  & containments                                   | 包含                              |                                    | 解决     |
 | 8     | [Issue 9]  | Convention & Conventions                                      | 规范                              |                                    | 解决     |
-| 9     | [Issue 10] | data wrangling                                                | 数据清洗                          |                                    | **未解决** |
+| 9     | [Issue 10] | data wrangling                                                | 数据清理                          |                                    | 解决     |
 | 10    | [Issue 11] | Primitive Class & Primitive Classes                           | 基元类                            |                                    | 解决     |
 | 11    | [Issue 11] | Defined Class & Defined Classes                               | 定义类                            |                                    | 解决     |
-| 12    | [Issue 12] | disorder & disorders                                          | 紊乱&失调&障碍                    | 同 [Issue 94]                      | **未解决** |
+| 12    | [Issue 12] | disorder & disorders                                          | 紊乱                              | 同 [Issue 94]                      | 解决     |
 | 13    | [Issue 13] | Epistemological idealism                                      | 认识论的唯心主义                  |                                    | 解决     |
 | 14    | [Issue 14] | Exhaustiveness                                                | 广谱性                            |                                    | 解决     |
 | 15    | [Issue 15] | fallibilism                                                   | 可误论                            |                                    | 解决     |
-| 16    | [Issue 16] | foundational relation  & foundational relations               | 基础关系                          |                                    | **未解决** |
-| 17    | [Issue 17] | has_participant                                               | 有参与者                          |                                    | **未解决** |
+| 16    | [Issue 16] | foundational relation  & foundational relations               | 基础关系                          |                                    | 解决     |
+| 17    | [Issue 17] | has_participant                                               | 有参与者                          |                                    | 解决     |
 | 18    | [Issue 18] | hierarchy  & hierarchies                                      | 层次结构                          | 层级结构？分层结构？               | 解决     |
 | 19    | [Issue 19] | identity & identities                                         | 同一性                            |                                    | 解决     |
-| 20    | [Issue 20] | Information Artifact Ontology                                 | 信息工件本体                      |                                    | **未解决** |
+| 20    | [Issue 20] | Information Artifact Ontology                                 | 信息工件本体                      |                                    | 解决     |
 | 21    | [Issue 21] | instantiate  & instantiates                                   | 实例化                            |                                    | 解决     |
-| 22    | [Issue 22] | integral_continuant_part_of                                   | 必需常体部件                      |                                    | **未解决** |
-| 23    | [Issue 23] | Reciprocity & reciprocal                                      | 对等                              | 互惠？互换？                       | **未解决** |
+| 22    | [Issue 22] | integral_occurrent_part                                       | 是...必要常体部分                 |                                    | **未解决** |
+| 23    | [Issue 23] | Reciprocity & reciprocal                                      | 互反                              | 互惠？互换？                       | 解决     |
 | 24    | [Issue 24] | Living subject                                                | 生命主体                          |                                    | 解决     |
 | 25    | [Issue 25] | Low-Hanging Fruit & low-hanging fruit pirinciple              | 低果先摘                          |                                    | 解决     |
 | 26    | [Issue 26] | mass nouns                                                    | 不可数名词                        |                                    | 解决     |
 | 27    | [Issue 27] | metaphysical nominalism                                       | 形而上学唯名论                    |                                    | 解决     |
 | 28    | [Issue 28] | negative term & negative terms                                | 否定术语                          |                                    | 解决     |
 | 29    | [Issue 29] | Novum Organum                                                 | 新工具                            |                                    | 解决     |
-| 30    | [Issue 30] | OBO Foundry                                                   | OBO工场                           |                                    | **未解决** |
+| 30    | [Issue 30] | OBO Foundry                                                   | OBO工场                           |                                    | 解决     |
 | 31    | [Issue 31] | Obstacles to Accessibility                                    | 可达性的障碍                      |                                    | 解决     |
 | 32    | [Issue 32] | organon                                                       | 工具论                            |                                    | 解决     |
 | 33    | [Issue 33] | particulars                                                   | 殊相                              |                                    | 解决     |
 | 34    | [Issue 34] | Performed activity                                            | 执行活动                          |                                    | **未解决** |
-| 35    | [Issue 35] | perspectivalism                                               | 观相主义                          |                                    | **未解决** |
-| 36    | [Issue 36] | Perspective                                                   | 视角                              |                                    | **未解决** |
+| 35    | [Issue 35] | perspectivalism                                               | 观相主义                          |                                    | 解决     |
+| 36    | [Issue 36] | Perspective                                                   | 视角                              |                                    | 解决     |
 | 37    | [Issue 37] | positive term & positive terms                                | 肯定术语                          |                                    | 解决     |
-| 38    | [Issue 38] | preceded_by                                                   | 之后                              | 在...之后                          | **未解决** |
+| 38    | [Issue 38] | preceded_by                                                   | 在...之后                         |                                    | 解决     |
 | 39    | [Issue 39] | preferred term & preferred terms                              | 首选术语                          |                                    | 解决     |
-| 40    | [Issue 40] | proper_continuant_part_of                                     | 真常体部件                        | …的真常体部件                      | 解决     |
-| 41    | [Issue 40] | proper_occurrent_part_of                                      | 真行体部件                        | …的真行体部件                      | 解决     |
+| 40    | [Issue 40] | proper_continuant_part_of                                     | 是…的真常体部分                   |                                    | 解决     |
+| 41    | [Issue 40] | proper_occurrent_part_of                                      | 是…的真行体部分                   |                                    | 解决     |
 | 42    | [Issue 41] | property & properties                                         | 属性                              |                                    | 解决     |
-| 43    | [Issue 42] | RDF Schema                                                    | RDF Schema                        | 不翻译                             | **未解决** |
-| 44    | [Issue 43] | reference                                                     | 指称 & 参考 & 参照                |                                    | **未解决** |
+| 43    | [Issue 42] | RDF Schema                                                    | RDF架构                           |                                    | 解决     |
+| 44    | [Issue 43] | reference                                                     | 指称 & 参考 & 参照                |                                    | 解决     |
 | 45    | [Issue 44] | reference frame & Frames of Reference                         | 参照系                            |                                    | 解决     |
 | 46    | [Issue 45] | reference ontology  & reference ontologies                    | 参考本体                          |                                    | 解决     |
 | 47    | [Issue 46] | referent & referents                                          | 所指物                            |                                    | 解决     |
-| 48    | [Issue 47] | regimentation & regimentations                                | 整编                              |                                    | **未解决** |
+| 48    | [Issue 47] | regimentation & regimentations                                | 整编                              |                                    | 解决     |
 | 49    | [Issue 48] | entities and relationships                                    | 实体和关系                        |                                    | 解决     |
 | 50    | [Issue 49] | knowledge representation                                      | 知识表示                          | 知识表达                           | **未解决** |
 | 51    | [Issue 50] | representation & representations                              | 表征 & 表象 & 表示                |                                    | **未解决** |
 | 52    | [Issue 51] | representational artifact  & representational artifacts       | 表述性工件                        | 表征性工件                         | **未解决** |
 | 53    | [Issue 52] | representational units and composite representations          | 表述单元和复合表述                |                                    | **未解决** |
 | 54    | [Issue 53] | singular noun rule                                            | 单数名词规则                      |                                    | 解决     |
-| 55    | [Issue ]   | taxonomy  & taxonomies                                        | 专业分类表 & 分类表               |                                    | **未解决** |
-| 56    | [Issue 54] | classification & taxonomic classification                     | 分类法 & 分类                     |                                    | **未解决** |
+| 55    | [Issue 54] | taxonomy  & taxonomies                                        | 专业分类表                        |                                    | 解决     |
+| 56    | [Issue 54] | classification & taxonomic classification                     | 分类法 & 专业分类                 |                                    | 解决     |
 | 57    | [Issue 55] | term & terms                                                  | 术语                              |                                    | 解决     |
 | 58    | [Issue 56] | terminology & terminologies                                   | 术语集                            |                                    | 解决     |
-| 59    | [Issue 57] | The All-Some Rule                                             | 所有-某些原则                     |                                    | **未解决** |
+| 59    | [Issue 57] | The All-Some Rule                                             | 所有-某些原则                     |                                    | 解决     |
 | 60    | [Issue 58] | the Biomedical Research Integrated Domain Group (BRIDG) model | 生物医学研究集成领域组(BRIDG)模型 |                                    | 解决     |
 | 61    | [Issue 59] | The Ontology for General Medical Science, OGMS                | 基础医学本体                      | 普通医学本体？                     | 解决     |
 | 62    | [Issue 60] | Tower of Babel                                                | 巴别塔问题                        |                                    | 解决     |
@@ -69,7 +69,7 @@
 | 65    | [Issue 63] | univocity                                                     | 单义性                            |                                    | 解决     |
 | 66    | [Issue 64] | Use-Mention                                                   | 使用与提述                        |                                    | 解决     |
 | 67    | [Issue 65] | realism                                                       | 实在论                            |                                    | 解决     |
-| 68    | [Issue 66] | reality                                                       | 现实 & 客观现实                   | 实在？？                           | **未解决** |
+| 68    | [Issue 66] | reality                                                       | 现实 & 客观现实                   | 实在？？                           | 解决     |
 | 69    | [Issue 67] | computer usable language                                      | 计算机可执行语言                  |                                    | 解决     |
 | 70    | [Issue 68] | Foundational Model of Anatomy                                 | 解剖学基础模型                    | Foundational Model of Anatomy, FMA | 解决     |
 | 71    | [Issue 69] | accessibility                                                 | 可达性                            |                                    | 解决     |
@@ -77,15 +77,15 @@
 | 73    | [Issue 70] | domain neutral                                                | 领域中立                          |                                    | 解决     |
 | 74    | [Issue 71] | Emergence                                                     | 涌现                              |                                    | 解决     |
 | 75    | [Issue 72] | primitive relationship & primitive relationships              | 基元关系                          |                                    | 解决     |
-| 76    | [Issue 73] | instant & instants                                            | 瞬时 & 时刻 & 瞬间                |                                    | **未解决** |
-| 77    | [Issue 74] | inhere & inheres & inhered & inhering & inherence             | 寓于                              |                                    | **未解决** |
-| 78    | [Issue 75] | derives_from                                                  | 衍生自                            |                                    | **未解决** |
-| 79    | [Issue 76] | imply & implies & implied & implying & implication            | 蕴涵                              |                                    | **未解决** |
+| 76    | [Issue 73] | instant & instants                                            | 瞬时 & 时刻                       |                                    | 解决     |
+| 77    | [Issue 74] | inhere & inheres & inhered & inhering & inherence             | 依附于 & 依附                     |                                    | 解决     |
+| 78    | [Issue 75] | derives_from                                                  | 源自                              |                                    | 解决     |
+| 79    | [Issue 76] | imply & implies & implied & implying & implication            | 蕴涵                              |                                    | 解决     |
 | 80    | [Issue 77] | instance-level                                                | 实例级                            |                                    | 解决     |
 | 81    | [Issue 78] | Region Connection Calculus                                    | 区域连接演算                      | Region Connection Calculus (RCC)   | 解决     |
-| 82    | [Issue 79] | 原书勘误                                                      |                                   |                                    | **未解决** |
-| 83    | [Issue 96] | parthood                                                      | 部件关系                          | 部分关系？                         | **未解决** |
-| 84    | [Issue 96] | part & parts                                                  | 部件                              | 部分 or 部件？                     | **未解决** |
+| 82    | [Issue 79] | 原书勘误                                                      |                                   |                                    | 解决     |
+| 83    | [Issue 96] | parthood                                                      | 部分关系                          |                                    | 解决      |
+| 84    | [Issue 96] | part & parts                                                  | 部分                              |                                    | 解决      |
 | 85    | [Issue 80] | integral parthood                                             | 组成部件关系                      |                                    | **未解决** |
 | 86    | [Issue 81] | relata                                                        | 关系项                            |                                    | 解决     |
 | 87    | [Issue 82] | Weak supplementation                                          | 弱补充                            |                                    | **未解决** |
@@ -101,7 +101,7 @@
 | 97    | [Issue 91] | PhilPaper                                                     | PhilPaper                         | 专有名词，可以不翻译               | 解决     |
 | 98    | [Issue 92] | nonskeptical realism                                          | 非怀疑论的实在论                  |                                    | 解决     |
 | 99    | [Issue 93] | mental representations                                        | 心理表征                          |                                    | 解决     |
-| 100   | [Issue 94] | disorder & disorders                                          | 失调                              | 紊乱/障碍                          | **未解决** |
+| 100   | [Issue 94] | disorder & disorders                                          | 紊乱                              | 紊乱/障碍                          |  解决    |
 | 101   | [Issue 95] | Basic Formal Ontology                                         | 基本形式化本体                    |                                    | 解决     |
 | 102   | [Issue 96] | Site & Sites                                                  | 位域                              |                                    | **未解决** |
 | 103   | [Issue 97] | object & objects                                              | 物件                              |   对象？                           | **未解决** |
@@ -242,5 +242,3 @@
 [Issue 95]:https://github.com/biomedontology/TermChinesetranslation/issues/95
 [Issue 96]:https://github.com/biomedontology/TermChinesetranslation/issues/96
 [Issue 97]:https://github.com/biomedontology/TermChinesetranslation/issues/97
-
-
